// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feedback character limit Character limit ok, user can submit feedback 1`] = `
<Feedback
  feedbackSentryDsn="https://eccc8b561b9a461990309b01d33d54e3@sentry.io/1848287"
  location={Object {}}
  site="dr-ui"
  type="page"
>
  <div
    className="bg-gray-faint py12 px18 round color-gray"
  >
    <div>
      <div>
        <div
          className="inline-block bg-green color-white round-full w18 h18 align-middle mr3 mb3"
        >
          <Icon
            inline={false}
            name="check"
            passthroughProps={Object {}}
            size={18}
          >
            <svg
              className="events-none icon"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </Icon>
        </div>
         
        Thanks for your feedback.
      </div>
      <div
        className="mt12"
      >
        <div
          className="mb6"
        >
          If you have more specific feedback
          , you can provide it below (optional):
        </div>
        <div
          className="relative"
        >
          <ControlTextarea
            id="docs-feedback"
            noAuto={false}
            onChange={[Function]}
            optional={false}
            themeControlTextarea="textarea hmin120"
            themeControlWrapper="bg-white mb6"
            value="Lorem ipsum dolor sit amet"
          >
            <ControlWrapper
              id="docs-feedback"
              themeControlWrapper="bg-white mb6"
            >
              <div
                className="relative bg-white mb6"
              >
                <textarea
                  aria-required={true}
                  className="textarea hmin120"
                  data-test="docs-feedback-textarea"
                  id="docs-feedback"
                  name="docs-feedback"
                  onChange={[Function]}
                  value="Lorem ipsum dolor sit amet"
                />
                <div
                  role="alert"
                />
              </div>
            </ControlWrapper>
          </ControlTextarea>
          <div
            className="absolute bottom right mb6 mr18 txt-mono"
            id="dr-ui--feedback-char-counter"
          >
            974
          </div>
        </div>
        <button
          className="btn btn--s mb18 inline-block"
          disabled={false}
          id="dr-ui--feedback-submit-button"
          onClick={[Function]}
        >
          Send feedback
        </button>
        <div
          className="txt-s txt-em"
        >
          This form is for documentation feedback. If you have a technical question about how to use a Mapbox product,
           
          <a
            className="link"
            href="https://support.mapbox.com/hc/en-us"
          >
            contact Support
          </a>
          .
        </div>
      </div>
    </div>
  </div>
</Feedback>
`;

exports[`Feedback character limit Character limit too long, user cannot submit feedback 1`] = `
<Feedback
  feedbackSentryDsn="https://eccc8b561b9a461990309b01d33d54e3@sentry.io/1848287"
  location={Object {}}
  site="dr-ui"
  type="page"
>
  <div
    className="bg-gray-faint py12 px18 round color-gray"
  >
    <div>
      <div>
        <div
          className="inline-block bg-green color-white round-full w18 h18 align-middle mr3 mb3"
        >
          <Icon
            inline={false}
            name="check"
            passthroughProps={Object {}}
            size={18}
          >
            <svg
              className="events-none icon"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </Icon>
        </div>
         
        Thanks for your feedback.
      </div>
      <div
        className="mt12"
      >
        <div
          className="mb6"
        >
          If you have more specific feedback
          , you can provide it below (optional):
        </div>
        <div
          className="relative"
        >
          <ControlTextarea
            id="docs-feedback"
            noAuto={false}
            onChange={[Function]}
            optional={false}
            themeControlTextarea="textarea hmin120"
            themeControlWrapper="bg-white mb6"
            value="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
          >
            <ControlWrapper
              id="docs-feedback"
              themeControlWrapper="bg-white mb6"
            >
              <div
                className="relative bg-white mb6"
              >
                <textarea
                  aria-required={true}
                  className="textarea hmin120"
                  data-test="docs-feedback-textarea"
                  id="docs-feedback"
                  name="docs-feedback"
                  onChange={[Function]}
                  value="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                />
                <div
                  role="alert"
                />
              </div>
            </ControlWrapper>
          </ControlTextarea>
          <div
            className="absolute bottom right mb6 mr18 txt-mono color-red"
            id="dr-ui--feedback-char-counter"
          >
            -340
          </div>
        </div>
        <button
          className="btn btn--s mb18 inline-block"
          disabled={true}
          id="dr-ui--feedback-submit-button"
          onClick={[Function]}
        >
          Send feedback
        </button>
        <span
          className="ml12 color-red txt-s bg-red-faint round inline-block py3 px12"
          id="dr-ui--feedback-overlimit"
        >
          <Icon
            inline={true}
            name="alert"
            passthroughProps={Object {}}
            size={18}
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-alert"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </Icon>
           Your message is over the
           
          1000
           character limit.
        </span>
        <div
          className="txt-s txt-em"
        >
          This form is for documentation feedback. If you have a technical question about how to use a Mapbox product,
           
          <a
            className="link"
            href="https://support.mapbox.com/hc/en-us"
          >
            contact Support
          </a>
          .
        </div>
      </div>
    </div>
  </div>
</Feedback>
`;

exports[`Sent helpful rating basic 1`] = `
<div
  className="bg-gray-faint py12 px18 round color-gray"
>
  <div>
    <div>
      <div
        className="inline-block bg-green color-white round-full w18 h18 align-middle mr3 mb3"
      >
        <Icon
          inline={false}
          name="check"
          passthroughProps={Object {}}
          size={18}
        />
      </div>
       
      Thanks for your feedback.
    </div>
    <div
      className="mt12"
    >
      <div
        className="mb6"
      >
        If you have more specific feedback
        , you can provide it below (optional):
      </div>
      <div
        className="relative"
      >
        <ControlTextarea
          id="docs-feedback"
          noAuto={false}
          onChange={[Function]}
          optional={false}
          themeControlTextarea="textarea hmin120"
          themeControlWrapper="bg-white mb6"
          value=""
        />
        <div
          className="absolute bottom right mb6 mr18 txt-mono"
          id="dr-ui--feedback-char-counter"
        >
          1000
        </div>
      </div>
      <button
        className="btn btn--s mb18 inline-block"
        disabled={true}
        id="dr-ui--feedback-submit-button"
        onClick={[Function]}
      >
        Send feedback
      </button>
      <div
        className="txt-s txt-em"
      >
        This form is for documentation feedback. If you have a technical question about how to use a Mapbox product,
         
        <a
          className="link"
          href="https://support.mapbox.com/hc/en-us"
        >
          contact Support
        </a>
        .
      </div>
    </div>
  </div>
</div>
`;
